{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 2,
  "lineage": "9b4570d8-b0e7-e648-e3e4-ec6e253c24c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215702613858:internet-gateway/igw-0070b7e9b345c8cd3",
            "id": "igw-0070b7e9b345c8cd3",
            "owner_id": "215702613858",
            "tags": {
              "Name": "Lab4-IGW"
            },
            "tags_all": {
              "Name": "Lab4-IGW"
            },
            "vpc_id": "vpc-01e4e60fc12f89e05"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0070b7e9b345c8cd3",
            "id": "r-rtb-03c1a5ae6af0a04331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03c1a5ae6af0a0433",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215702613858:route-table/rtb-03c1a5ae6af0a0433",
            "id": "rtb-03c1a5ae6af0a0433",
            "owner_id": "215702613858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0070b7e9b345c8cd3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lab4-Public-RT"
            },
            "tags_all": {
              "Name": "Lab4-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e4e60fc12f89e05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f1c418a678bf059",
            "route_table_id": "rtb-03c1a5ae6af0a0433",
            "subnet_id": "subnet-003e16397d7a0f252"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215702613858:subnet/subnet-003e16397d7a0f252",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003e16397d7a0f252",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "215702613858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lab4-Public-Subnet"
            },
            "tags_all": {
              "Name": "Lab4-Public-Subnet"
            },
            "vpc_id": "vpc-01e4e60fc12f89e05"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:215702613858:vpc/vpc-01e4e60fc12f89e05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0964b6f6b469c0a6c",
            "default_route_table_id": "rtb-023c693de258365de",
            "default_security_group_id": "sg-098feab174d046289",
            "dhcp_options_id": "dopt-0ed93f53ee42fa80e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e4e60fc12f89e05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023c693de258365de",
            "owner_id": "215702613858",
            "tags": {
              "Name": "Lab4-VPC"
            },
            "tags_all": {
              "Name": "Lab4-VPC"
            }
          }
        }
      ]
    }
  ]
}